# mini-buildd

./: .gitattributes  .gitignore  .pylintrc  .ui-auto.conf  devel  mini-buildd  mini-buildd-tool  setup.py  tox.ini
debian/: 99mini-buildd  NEWS  NEWS.Debian  QUICKSTART  README.Debian  TODO  TODO.Debian  changelog  control  copyright  fstab-generic  mbd-debootstrap-uname-2.6  mini-buildd-bld.config  mini-buildd-bld.init  mini-buildd-bld.install  mini-buildd-bld.postinst  mini-buildd-bld.prerm  mini-buildd-bld.templates  mini-buildd-common.config  mini-buildd-common.install  mini-buildd-common.lintian-overrides  mini-buildd-common.postinst  mini-buildd-common.postrm  mini-buildd-common.templates  mini-buildd-rep.config  mini-buildd-rep.cron.daily  mini-buildd-rep.cron.weekly  mini-buildd-rep.default  mini-buildd-rep.init  mini-buildd-rep.install  mini-buildd-rep.logrotate  mini-buildd-rep.maintscript  mini-buildd-rep.postinst  mini-buildd-rep.preinst  mini-buildd-rep.templates  mini-buildd-sudoers  mini-buildd.NEWS  mini-buildd.config  mini-buildd.cron.daily  mini-buildd.cron.weekly  (+16 more)
doc/: Makefile  Overview.dia  Vortrag.odp  __init__.py  admin.rst  conf.py  django_settings.py  glossary.rst  index.rst  introduction.rst  quickstart.rst  todo.rst  user.rst
examples/: 09bug728096shmfixer  README  apache-ssl-proxy.conf  (+10 more)
examples/mbd-test-cpp/: .ui-auto.conf  ChangeLog  Makefile.am  configure.ac
examples/mbd-test-cpp/debian/: README.Debian  changelog  control
examples/mbd-test-cpp/src/main/: Main.cpp  Makefile.am
examples/mbd-test-cpp/src/mbd-test-cpp/: Lib.cpp
(+155 files in other folders)
